--- a/index.html
+++ b/index.html
@@ -6,83 +6,160 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/index_style.css">
+    <link rel="stylesheet" href="Imagenes/imagenes_index/arrow.png">
 </head>
 
 <body>
-    <section>
-        <div>
-            <img src="Imagenes/logo.png" alt="" class="nav_bar">
-            <nav>
-                <div class="nav_bar">
-                    <a href="">Home</a>
-                    <a href="">About Us</a>
-                    <a href="">Services</a>
-                    <a href="">Our Teams</a>
-                    <a href="">Contact us</a>
-                </div>
+    <div id="div__header">
+        <header>
+            <div class="navBar-logo">
+                <img src="Imagenes/logo.png" alt="logo">
+            </div>
+            <nav class="nav__bar navBar-logo">
+                <a href="">Home</a>
+                <a href="">About Us</a>
+                <a href="">Services</a>
+                <a href="">Our Teams</a>
+                <a href="">Contact us</a>
             </nav>
-            <header>
-                <h1 class="header__text textAndBreakLine">Design your <hr class="header__breakLine textAndBreakLine"> interor with high quality. </h1>
-            </header>
+        </header>
+    </div>
+    <div class="hero firstHero">
+        <div class="container__firstTitleHero">
+            <p>Design your <br>interor with high<br>quality.</p>
+            <p class="line"></p>
         </div>
-        <div>
-            <p class="textAndBreakLine">ABOUT <hr class="textAndBreakLine"></p>
-            <p>“We're one of the best furniture agency. Prioritizing customers and making purchases easy are the
-                hallmarks of our agency.”</p>
+        <div class="diferenciales">
+            <ul>
+                <li class="li-Diferenciales">
+                    <h2 class="numberDiferenciales">350+</h2>
+                    <p class="textoDiferenciales">Project Completed</p>
+                </li>
+                <li class="li-Diferenciales">
+                    <h2 class="numberDiferenciales">23+</h2>
+                    <p class="textoDiferenciales">Professional Teams</p>
+                </li>
+                <li class="li-Diferenciales">
+                    <h2 class="numberDiferenciales">15+</h2>
+                    <p class="textoDiferenciales">Years Experience</p>
+                </li>
+            </ul>
         </div>
-        <div>
-            <p class="textAndBreakLine">SERVICE<hr class="textAndBreakLine"></p>
-            <p>Attractive furniture with the best quality.</p>
-            <p>Customize your interior design into a dream place with the best designers and quality furniture. We try our best to fulfill your expectations.</p>
-            <ol>
-                <li>
-                    <p>Interior Design</p>
-                </li>
-                <li>
-                    <p>Consultant</p>
-                </li>
-                <li>
-                    <p>Construction Consultant</p>
-                </li>
+        <img src="Imagenes/imagenes_index/imageA.png" alt="">
+    </div>
+    <div class="hero secondHero">
+        <div class="container__titleHero">
+            <p class="spaceBeforeLine"> ABOUT </p>
+            <p class="line"></p>
+        </div>
+        <p class="principal">“We're one of the best furniture agency. Prioritizing customers and making purchases easy
+            are thehallmarks of
+            our agency.”
+        </p>
+        <div class="container__imagen">
+            <img src="Imagenes/imagenes_index/imageB.png" class="secondHero-image" alt="">
+        </div>
+        <div class="container__grayText">
+            <p class="secundario">Online learning with us does not interfere with your daily life. because learning can
+                be
+                done anytime and anywhere.
+            </p>
+            <button>Learn More</button>
+        </div>
+    </div>
+    <div class="hero thirdHero">
+        <div class="container__titleHero">
+            <p class="spaceBeforeLine">SERVICE</p>
+            <p class="line"></p>
+        </div>
+        <p class="principal">Attractive furniture with the best quality.</p>
+        <p class="secundario">Customize your interior design into a dream place with the best designers and quality
+            furniture. We try our
+            best to fulfill your expectations.
+        </p>
+        <ol class="listaServicios" type="1">
+            <li>
+                <p>Interior Design</p>
+                <img src="Imagenes/imagenes_index/arrow.png" alt="" class="flecha">
+            </li>
+            <li>
+                <p>Consultant</p>
+                <img src="Imagenes/imagenes_index/arrow.png" alt="" class="flecha">
+            </li>
+            <li>
+                <p>Construction Consultant</p>
+                <img src="Imagenes/imagenes_index/arrow.png" alt="" class="flecha">
+            </li>
+        </ol>
+        <img src="Imagenes/imagenes_index/ImageC.png" alt="" class="thirdHero-image">
+    </div>
+    <div class="hero forthHero">
+        <div class="container__titleHero">
+            <p class="spaceBeforeLine">PRODUCT</p>
+            <p class="line"></p>
+        </div>
+        </p>
+        <div class="principalAndSecundario">
+            <p class="principal">Choose your <br>product themes.</p>
+            <p class="secundario">Find the theme you want. If our choice of theme is not what you want, you can
+                customize it as you want.</p>
+        </div>
+        <div class="forthHero-list">
+            <ol class="products__list">
+                <li class="listaProductos"> Vintage </li>
+                <img src="Imagenes/imagenes_index/arrow.png" alt="" class="flecha">
+                <p>The use of simple and limited elements to get the best effect or impression.</p>
+
+                <li class="listaProductos">Minimalist </li>
+                <img src="Imagenes/imagenes_index/arrow.png" alt="" class="flecha">
+                <p>The use of simple and limited elements to get the best effect or impression.</p>
+
+                <li class="listaProductos">Modern</li>
+                <img src="Imagenes/imagenes_index/arrow.png" alt="" class="flecha">
+                <p>The use of simple and limited elements to get the best effect or impression.</p>
+
+                <li class="listaProductos">Transitional</li>
+                <img src="Imagenes/imagenes_index/arrow.png" alt="" class="flecha">
+                <p>The use of simple and limited elements to get the best effect or impression.</p>
             </ol>
         </div>
-        <div>
-            <p class="textAndBreakLine">PRODUCT <hr class="textAndBreakLine"></p>
-            <p>Choose your product themes.</p>
-            <p>Find the theme you want. If our choice of theme is not what you want, you can customize it as you want.</p>
-            <div class="products_list">
-                <dl>
-                    <dt> Vintage </dt>
-                    <dd>The use of simple and limited elements to get the best effect or impression.</dd>
+    </div>
+    <div class="hero fiveHero">
+        <div class="container__titleHero">
+            <p class="spaceBeforeLine">MATERIAL</p>
+            <p class="line"></p>
+        </div>
+        <div class="fiveHero-texto">
+            <p class="principal">Choice of <br>materials for <br>quality furniture.</p>
+            <p class="secundario">You can custom the material as desired. And our furniture uses the best materials and selected quality materials.</p>
+            <button type="button">See materials</button>
+        </div>
 
-                    <dt>Minimalist </dt>
-                    <dd>The use of simple and limited elements to get the best effect or impression.</dd>
-
-                    <dt>Modern</dt>
-                    <dd>The use of simple and limited elements to get the best effect or impression.</dd>
-                    
-                    <dt>Transitional</dt>
-                    <dd>The use of simple and limited elements to get the best effect or impression.</dd>
-                </dl>
+        <div class="fiveHero-container-images">
+            <div class="fiveHero-allImages">
+                <img src="Imagenes/imagenes_index/Mask group.png" alt="" class="fiveHero-imageC">
+                <div class="fiveHero-imagesDerecha">
+                    <img src="Imagenes/imagenes_index/Mask group-1.png" alt="" class="fiveHero-imageA">
+                    <img src="Imagenes/imagenes_index/Mask group-2.png" alt="" class="fiveHero-imageB">
+                </div>
             </div>
         </div>
-        <div>
-            <p class="textAndBreakLine">MATERIAL<hr class="textAndBreakLine"></p>
-            <p>Choice of materials for quality furniture.</p>
-            <p>You can custom the material as desired. And our furniture uses the best materials and selected quality materials.</p>
-        </div>
-        <div>
-            <p>Let's discuss making your own interior like a dream place</p>
-            <p>Contact us to work together to build your amazing interior</p>
-        </div>
-    </section>
-    <footer>
-        <img src="Imagenes/logo.png" alt="" class="">
-        <p>One of the best furniture agency.</p>
-        <p>Enter  your email to get the laterst news</p>
-        <input type="email">
-    </footer>
-
+    </div>
+    <div class="hero heroBeforeFooter">
+        <p class="principal">Let's discuss making your own interior like a dream place</p>
+        <p class="secundario">Contact us to work together to build your amazing interior</p>
+        <button type="button">Contac Us</button>
+    </div>
 </body>
+<footer>
+    <div class="navBar-logo">
+        <img src="Imagenes/logo.png" alt="logo">
+    </div>
+    <p>One of the best furniture agency.</p>
+    <p>Enter your email to get the laterst news</p>
+    <button type="email">
+</footer>
 
 </html>
