--- a/services.html
+++ b/services.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="CSS/servicios_style.css">
+    <link rel="stylesheet" href="CSS/general.css">
+    <link rel="stylesheet" href="CSS/services_style.css">
     <title>Servicios</title>
 </head>
 
@@ -18,8 +19,8 @@
             </div>
             <nav class="menuNav">
                 <ul class="lista-itemNav">
-                    <li class="itemNav"><a href="">Home</a> </li>
-                    <li class="itemNav"><a href="">About Us</a></li>
+                    <li class="itemNav"><a href="index.html">Home</a> </li>
+                    <li class="itemNav"><a href="about.html">About Us</a></li>
                     <li class="itemNav"><a href="">Services</a></li>
                     <li class="itemNav"><a href="">Our Teams</a></li>
                     <li class="itemNav"><a href="">Contact Us</a></li>
@@ -28,82 +29,100 @@
         </header>
         <main class="container containerMain">
             <div class="main-textBox">
-                <h1 class="main-title">About</h1>
-                <p class="main-legend">It is a long established fact that a reader will be distracted by the readable
+                <h1 class="mainTitle">Services</h1>
+                <p class="mainSmallText">It is a long established fact that a reader will be distracted by the readable
                     content of a page when looking at its layout.</p>
-                <img src="Imagenes/img-servicios/unsplash_vbxyFxlgpjM.png" alt="" class="img imgAbout">
             </div>
+            <img src="Imagenes/imagenes_index/ImageC.png" alt="" class="img imgAbout">
         </main>
-        <section class="container containerSection_1">
-            <div class="textBox">
+        <div class="container container__div-1">
+            <div class="titleBox">
                 <h2 class="title">ACHIEVEMENT</h2>
                 <p class="breakLine"></p>
-                <p class="text">Interior customization with Danaanz, best quality with professional workers</p>
             </div>
-            <img src="Imagenes/img-servicios/Mask group.png" alt="" class=" imgAchivement">
-            <ul class="lista-benefits">
-                <li class="benefit">
-                    <h2 class="benefitTitle">350+</h2>
-                    <p class="benefitText">Project Completed</p>
-                </li>
-                <li class="benefit">
-                    <h2 class="benefitTitle">23+</h2>
-                    <p class="benefitText">Professional Teams</p>
-                </li>
-                <li class="benefit">
-                    <h2 class="benefitTitle">15+</h2>
-                    <p class="benefitText">Years Experience</p>
-                </li>
-            </ul>
-        </section>
-        <section class="container containerSection_2">
-            <div class="textBox">
-                <h2 class="title">SERVICE</h2>
+            <div class="achivementsContainer">
+                <div class="achivement">
+                    <img src="Imagenes/imagenes_servicios/Mask group-1.png" alt="" class="achivementImg">
+                    <div class="achivementTextBox">
+                        <h2 class="achivementTitle">Interior design</h2>
+                        <p class="achivementText">Customize your interior design into a dream place with the best
+                            designers and quality furniture. We try our best to fulfill your expectations.</p>
+                    </div>
+                </div>
+                <div class="achivement">
+                    <img src="Imagenes/imagenes_servicios/Mask group.png" alt="" class="achivementImg">
+                    <div class="achivementTextBox">
+                        <h2 class="achivementTitle">Consultant</h2>
+                        <p class="achivementText">Customize your interior design into a dream place with the best
+                            designers and quality furniture. We try our best to fulfill your expectations.</p>
+                    </div>
+                </div>
+                <div class="achivement">
+                    <img src="Imagenes/imagenes_servicios/Mask group-2.png" alt="" class="achivementImg">
+                    <div class="achivementTextBox">
+                        <h2 class="achivementTitle">Construction consultant</h2>
+                        <p class="achivementText">Customize your interior design into a dream place with the best
+                            designers and quality furniture. We try our best to fulfill your expectations.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container container__div-2">
+            <div class="titleBox">
+                <h2 class="title">PRODUCT</h2>
                 <p class="breakLine"></p>
-                <p class="text">Why Choose Us</p>
-                <p class="smallText">Customize your interior design into a dream place with the best designers and quality
-                    furniture. We try our best to fulfill your expectations.</p>
             </div>
-            <ul class="diferenciales">
-                <li>
-                    <p class="grayCirlce"></p>
-                    <h2 class="diferencialTitle">High Quality</h2>
-                    <p class="descripcionDiferencial">Customize your interior design into a dream place with the best
-                        designers and quality furniture. We try our best to fulfill your expectations.</p>
-    
+            <div class="textBox">
+                <p class="bigText">Choose your <br>product themes.</p>
+                <p class="smallText">Find the theme you want. If our choice of theme is not what you want, you can
+                    customize it as you want.</p>
+            </div>
+            <ol class="ol-productos">
+                <li class="li-producto">
+                    <h2 class="li-producto__title">Vintage</h2>
+                    <img src="Imagenes/imagenes_index/arrow.png" alt="" class="li-producto__flecha">
+                    <p>The use of simple and limited elements to get the best effect or impression.</p>
                 </li>
-                <li>
-                    <p class="grayCirlce"></p>
-                    <h2 class="diferencialTitle">Professional Designer</h2>
-                    <p class="descripcionDiferencial">Customize your interior design into a dream place with the best
-                        designers and quality furniture. We try our best to fulfill your expectations.</p>
+
+                <li class="li-producto">
+                    <h2 class="li-producto__title">Minimalist</h2>
+                    <img src="Imagenes/imagenes_index/arrow.png" alt="" class="li-producto__flecha">
+                    <p>The use of simple and limited elements to get the best effect or impression.</p>
                 </li>
-                <li>
-                    <p class="grayCirlce"></p>
-                    <h2 class="diferencialTitle">The Best Services</h2>
-                    <p class="descripcionDiferencial">Customize your interior design into a dream place with the best
-                        designers and quality furniture. We try our best to fulfill your expectations.</p>
+                <li class="li-producto">
+                    <h2 class="li-producto__title">Modern</h2>
+                    <img src="Imagenes/imagenes_index/arrow.png" alt="" class="li-producto__flecha">
+                    <p>The use of simple and limited elements to get the best effect or impression.</p>
                 </li>
-            </ul>
-        </section>
-        <section class="container containerSection_3">
-            <div class="left sectLeft">
+
+                <li class="li-producto">
+                    <h2 class="li-producto__title">Transitional</h2>
+                    <img src="Imagenes/imagenes_index/arrow.png" alt="" class="li-producto__flecha">
+                    <p>The use of simple and limited elements to get the best effect or impression.</p>
+                </li>
+            </ol>
+        </div>
+        <div class="container containerDiv_3">
+            <div class="left">
                 <p>let's discuss making your interior like a dream place</p>
             </div>
-            <div class="rigth sectRigth">
+            <div class="rigth">
                 <p>Contact us below to work together to build your amazing interior</p>
                 <button>Contact Us</button>
             </div>
-        </section>
-    </body>
-    <footer class="rodapie">
-        <div class="left footerLeft">
-            <img src="Imagenes/logo.png" alt="" class="logo">
-            <p>One of the best furniture agency.</p>
         </div>
-        <div class="rigth footerRigth">
-            <p>Enter  your email to get the laterst news</p>
-            <input type="email" placeholder="Email Adress" class="btn-email">
-        </div>
-    </footer>
+
+        <footer class="rodapie">
+            <div class="footerLeft">
+                <img src="Imagenes/logo.png" alt="" class="logo">
+                <p>One of the best furniture agency.</p>
+            </div>
+            <div class="footerRigth">
+                <p>Enter your email to get the laterst news</p>
+                <input type="email" placeholder="Email Adress" class="btn-email">
+            </div>
+        </footer>
+    </div>
+</body>
+
 </html>
